syntax = "proto3";

message DataSet {
	uint32 schema_id = 1;
	int64  timestamp = 2;

	message Column {
		bool   bool_value   = 1;
		int32  int_value    = 2;
		float  float_value  = 3;
		int64  long_value   = 4;
		double double_value = 5;
		string string_value = 6;
	}

	message Row {
		repeated Column column = 1;
	}

	repeated Row row = 3;
}