syntax = "proto3";

message Schema {
	string name        = 1;
	uint32 id          = 2;

	uint32 version     = 3;

	string topic       = 4;
	string description = 5;

	enum DataType {
		UNKNOWN_DATA_TYPE = 0;
		BOOL              = 1;
		INT               = 2;
		FLOAT             = 3;
		LONG              = 4;
		DOUBLE            = 5;
		STRING            = 6;
	}

	enum Type {
		LITERAL = 0;
		GAGUE   = 1;
		COUNTER = 2;
	}

	message Value {
		string   name        = 1;
		string   description = 2;
		bool     is_key      = 3;
		DataType data_type   = 4;
		Type     type        = 5;
	}

	repeated Value value = 6;
}